# FutureOfAIviaAI

./: LICENSE  README.md  create_data.py  environment.yaml  evaluate_model.py  network_analysis.ipynb  pyproject.toml  simple_model.py  utils.py
all_models/: README.md
all_models/M1/: README.md  blend.py  config.py  file_utils.py  inference_gbm.py  inference_gnn.py  preprocess_gbm.py  preprocess_gnn.py  preprocess_utils.py  requirements.txt  run.sh  time_utils.py  train_gnn.py  train_lightgbm.py  train_xgboost.py
all_models/M2/: .gitmodules  README.md  environment.yaml  requirement.txt
all_models/M3/: README.md  Sci-cast_LSTM.ipynb  Sci-cast_M3_LSTM.ipynb
all_models/M4/: README.md  code_final_submission.ipynb  common_neighbours.py  evaluate_model.py  preferential_attachment.py  utils.py
all_models/M5/: README.md  evaluate_model.py  evaluation_prediction.py  features_extraction.py  features_functions.py  model_functions.py  parameters_optimization.py  pca_transformation.py  utils.py
all_models/M6/: README.md
all_models/M7/: README.md  create_data.py  embedding_model.py  embedding_model_grarep.py  evaluate_model.py  settings.py  simple_model.py  utils.py
all_models/M8/: README.md  TransformerClassifier.ipynb  calculate_features.ipynb  convert_to_edg.py  (+5 more)
all_running_models/: README.md
concept_generation/: RAKE_create_concept_list_from_papers.py  README.md  reduce_concept_list.py
expected_output/: README.md  logs_SemanticGraph_delta_1_cutoff_25_minedge_1.pkl.txt
miscellaneous/: README.md  full_concepts_new.txt
plots/: README.md  plot_AUC_results.py
(+11 files in other folders)
